--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       <a href="about.html#contact" class="contact-link">Contact me</a>
       <a href="about.html" class="about-link">About me</a>
     </div>
+
     <div class="container">
       <div class="row">
         <div class="col-6 d-flex w-50">
@@ -62,7 +63,7 @@
         </div>
 
         <div class="col-6">
-          <h2 class="mb-3">Yoga app</h2>
+          <h2 class="mb-3">Ice-cream app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -78,20 +79,21 @@
 
       <div class="row mt-5">
         <div class="col-md-6">
-          <h2>Yoga app</h2>
+          <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
-
-          <div class="mt-5">
-            <a href="#" class="btn btn-primary p-3"> Launch Ice-cream App</a>
-          </div>
         </div>
+
         <div class="col-md-6 d-flex w-50">
           <img src="src/Basic.png" class="img-fluid rounded border pt-5" />
+        </div>
+
+        <div class="mt-5">
+          <a href="#" class="btn btn-primary p-3"> Launch Ice-cream App</a>
         </div>
       </div>
 
@@ -101,7 +103,7 @@
         </div>
 
         <div class="col-md-6">
-          <h2>Yoga app</h2>
+          <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
