--- a/index.html
+++ b/index.html
@@ -78,32 +78,32 @@
       </div>
 
       <div class="row mt-5">
-        <div class="col-md-6">
-          <h2 class="mb-3">Yoga app</h2>
+        <div class="col-6">
+          <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
             eos eveniet alias temporibus deserunt veritatis minima fugiat
             explicabo eum dolore.
           </p>
+
+          <div class="mt-4">
+            <a href="#" class="btn btn-primary p-3"> Launch Weather App</a>
+          </div>
         </div>
 
-        <div class="col-md-6 d-flex w-50">
-          <img src="src/Basic.png" class="img-fluid rounded border pt-5" />
-        </div>
-
-        <div class="mt-5">
-          <a href="#" class="btn btn-primary p-3"> Launch Ice-cream App</a>
+        <div class="col-6 d-flex w-50">
+          <img src="src/vanilla.png" class="img-fluid rounded border pt-5" />
         </div>
       </div>
 
       <div class="row mt-5">
-        <div class="col-md-6 d-flex w-50">
+        <div class="col-6 d-flex w-50">
           <img src="src/Basic.png" class="img-fluid rounded border pt-5" />
         </div>
 
-        <div class="col-md-6">
-          <h2 class="mb-3">Yoga app</h2>
+        <div class="col-6">
+          <h2 class="mb-3">Ice-cream app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
             quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
@@ -111,7 +111,7 @@
             explicabo eum dolore.
           </p>
 
-          <div class="mt-5">
+          <div class="mt-4">
             <a href="#" class="btn btn-primary p-3"> Launch Ice-cream App</a>
           </div>
         </div>
