Made it SEO friendly

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Utomobongs web development portfolio with projects built"
+    />
     <meta name="viewport" content="width=h1, initial-scale=1.0" />
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
@@ -21,7 +25,7 @@
       crossorigin="anonymous"
     />
 
-    <title>My Portfolio Website</title>
+    <title>Portfolio Website of Utomobong - Utomobongs Portfolio</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
@@ -52,14 +56,20 @@
     <h1 class="text-center">Utomobong Usoro</h1>
     <h3 class="text-center">Front-end developer, based in Nigeria</h3>
     <div class="navigation mb-5">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a href="about.html#contact" class="contact-link" title="Contact Me"
+        >Contact me</a
+      >
+      <a href="about.html" class="about-link" title="About Me">About me</a>
     </div>
 
     <div class="container">
       <div class="row">
         <div class="col-6 d-flex w-50">
-          <img src="src/Basic.png" class="img-fluid rounded border pt-5" />
+          <img
+            src="src/Basic.png"
+            class="img-fluid rounded border pt-5"
+            alt="Basic"
+          />
         </div>
 
         <div class="col-6">
@@ -72,7 +82,9 @@
           </p>
 
           <div class="mt-4">
-            <a href="#" class="btn btn-primary p-3"> Launch Ice-cream App</a>
+            <a href="#" class="btn btn-primary p-3" title="Ice-cream App">
+              Launch Ice-cream App</a
+            >
           </div>
         </div>
       </div>
@@ -88,18 +100,28 @@
           </p>
 
           <div class="mt-4">
-            <a href="#" class="btn btn-primary p-3"> Launch Weather App</a>
+            <a href="#" class="btn btn-primary p-3" title="Weather App">
+              Launch Weather App</a
+            >
           </div>
         </div>
 
         <div class="col-6 d-flex w-50">
-          <img src="src/vanilla.png" class="img-fluid rounded border pt-5" />
+          <img
+            src="src/vanilla.png"
+            class="img-fluid rounded border pt-5"
+            alt="vanilla weather app"
+          />
         </div>
       </div>
 
       <div class="row mt-5">
         <div class="col-6 d-flex w-50">
-          <img src="src/Basic.png" class="img-fluid rounded border pt-5" />
+          <img
+            src="src/Basic.png"
+            class="img-fluid rounded border pt-5"
+            alt="Buy Ice-cream"
+          />
         </div>
 
         <div class="col-6">
@@ -112,7 +134,9 @@
           </p>
 
           <div class="mt-4">
-            <a href="#" class="btn btn-primary p-3"> Launch Ice-cream App</a>
+            <a href="#" class="btn btn-primary p-3" title="Ice-cream App">
+              Launch Ice-cream App</a
+            >
           </div>
         </div>
       </div>
