--- a/about.html
+++ b/about.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="description"
+      content="Get the best websites for your brands - Contact Utomobong"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
@@ -20,7 +24,9 @@
       integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
       crossorigin="anonymous"
     ></script>
-    <title>About me page</title>
+    <title>
+      Contact the best web developer for your brand - Utomobongs Contact
+    </title>
   </head>
   <link rel="stylesheet" href="/style.css" />
   <body>
@@ -63,23 +69,31 @@
           <img
             src="src/vanilla.png"
             class="img-fluid border p-2 shadow rounded"
+            alt="weather app"
           />
         </div>
         <div class="col-md-4">
           <img
             src="src/Basic.png"
             class="img-fluid border p-2 shadow rounded"
+            alt="Ice-cream app"
           />
         </div>
         <div class="col-md-4">
           <img
             src="src/vanilla.png"
             class="img-fluid border p-2 shadow rounded"
+            alt="weather app"
           />
         </div>
       </div>
       <div id="contact" class="contact-me mt-5">Contact Me</div>
-      <a href="mailto:princessyuthiee@gmail.com" class="email-link">Gmail</a>
+      <a
+        href="mailto:princessyuthiee@gmail.com"
+        class="email-link"
+        title="Contact Me"
+        >Gmail</a
+      >
     </div>
   </body>
 </html>
