Made it rrsponsive

--- a/about.html
+++ b/about.html
@@ -68,30 +68,30 @@
         <div class="col-md-4">
           <img
             src="src/vanilla.png"
-            class="img-fluid border p-2 shadow rounded"
+            class="img-fluid border p-2 shadow mb-4 rounded"
             alt="weather app"
           />
         </div>
         <div class="col-md-4">
           <img
             src="src/Basic.png"
-            class="img-fluid border p-2 shadow rounded"
+            class="img-fluid border p-2 shadow mb-4 rounded"
             alt="Ice-cream app"
           />
         </div>
         <div class="col-md-4">
           <img
             src="src/vanilla.png"
-            class="img-fluid border p-2 shadow rounded"
+            class="img-fluid border p-2 shadow mb-4 rounded"
             alt="weather app"
           />
         </div>
       </div>
-      <div id="contact" class="contact-me mt-5">Contact Me</div>
+      <div id="contact" class="contact-me mt-5">📪Contact Me</div>
       <a
         href="mailto:princessyuthiee@gmail.com"
         class="email-link"
-        title="Contact Me"
+        title="Contact Utomobong"
         >Gmail</a
       >
     </div>
