--- a/index.html
+++ b/index.html
@@ -64,15 +64,15 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-6 d-flex w-50">
+        <div class="col-sm-6 d-flex w-50">
           <img
             src="src/Basic.png"
-            class="img-fluid rounded border pt-5"
+            class="img-fluid rounded border pt-5 d-none d-sm-block"
             alt="Basic"
           />
         </div>
 
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Ice-cream app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -82,7 +82,11 @@
           </p>
 
           <div class="mt-4">
-            <a href="#" class="btn btn-primary p-3" title="Ice-cream App">
+            <a
+              href="#"
+              class="btn btn-primary p-3 launch-button"
+              title="Ice-cream App"
+            >
               Launch Ice-cream App</a
             >
           </div>
@@ -90,7 +94,7 @@
       </div>
 
       <div class="row mt-5">
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -100,31 +104,35 @@
           </p>
 
           <div class="mt-4">
-            <a href="#" class="btn btn-primary p-3" title="Weather App">
+            <a
+              href="#"
+              class="btn btn-primary p-3 launch-button"
+              title="Weather App"
+            >
               Launch Weather App</a
             >
           </div>
         </div>
 
-        <div class="col-6 d-flex w-50">
+        <div class="col-sm-6 d-flex w-50">
           <img
             src="src/vanilla.png"
-            class="img-fluid rounded border pt-5"
+            class="img-fluid rounded border pt-5 d-none d-sm-block"
             alt="vanilla weather app"
           />
         </div>
       </div>
 
       <div class="row mt-5">
-        <div class="col-6 d-flex w-50">
+        <div class="col-sm-6 d-flex w-50">
           <img
             src="src/Basic.png"
-            class="img-fluid rounded border pt-5"
+            class="img-fluid rounded border pt-5 d-none d-sm-block"
             alt="Buy Ice-cream"
           />
         </div>
 
-        <div class="col-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Ice-cream app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -134,7 +142,11 @@
           </p>
 
           <div class="mt-4">
-            <a href="#" class="btn btn-primary p-3" title="Ice-cream App">
+            <a
+              href="#"
+              class="btn btn-primary p-3 launch-button"
+              title="Ice-cream App"
+            >
               Launch Ice-cream App</a
             >
           </div>
